# Select-Launcher

./: .gitignore  LICENSE  Procfile  README.md  SelectLauncher.sln  Select_Launcher.sln  appveyor.yml  cspell.json  electron-builder.json5  package-lock.json  package.json  tailwind.config.js
.erb/configs/: webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish.yml  test.yml
AccounstAPI/: WeatherForecast.cs
AccounstAPI/Controllers/: WeatherForecastController.cs
AccountsAPI/: .env  AccountsAPI.csproj  Program.cs
AccountsAPI/Controllers/: WeatherForecastController.cs
AccountsAPI/Database/: MongoController.cs
AccountsAPI/Models/: Profile.cs  User.cs  WeatherForecast.cs
AccountsAPI/Properties/: launchSettings.json
AccountsAPI/Util/: DotEnv.cs
SelectLauncher/SelectLauncher.Droid/: Main.cs  MainActivity.cs  (+1 more)
Select_Launcher/: Form1.Designer.cs  Form1.cs  Program.cs  Select_Launcher.csproj
Utils/: InstallerScript.ps1
client/: .env  .gitignore  LICENSE  README.md  electron-builder.json5  index.html  package-lock.json  package.json  pubspec.yaml  tailwind.config.js  themes.json  tsconfig.json  vite.config.ts
client/lib/: main.dart
server/: .env  .gitignore  README.md  app.ts  package-lock.json  package.json  requests.rest  testRoutes.rest  tsconfig.json
src/: App.tsx
updater/: Cargo.toml  build.rs
updater/src/: main.rs
updater/src/updateFunctions/: mod.rs  update.rs
updater/src/update_functions/: mod.rs  release_schema.rs  update.rs
(+306 files in other folders)
