[package]
name = "updater"
version = "0.1.0"
edition = "2021"
authors = ["Select Studios <email>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
tracing-subscriber = "0.3"
semver = "1.0.16"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
